--- a/packages/puzzlescript-cli/package.json
+++ b/packages/puzzlescript-cli/package.json
@@ -1,6 +1,7 @@
 {
     "version": "6.0.0-alpha.2",
     "name": "puzzlescript-cli",
+    "homepage": "https://github.com/philschatz/puzzlescript",
     "files": [
         "lib/",
         "src/"
